--- a/acceso_ejercicios.html
+++ b/acceso_ejercicios.html
@@ -23,25 +23,25 @@
         <div class="collapse navbar-collapse p-3 border bg-light" id="navbarNav">
           <ul class="navbar-nav list-unstyled mb-0">
             <li class="nav-item">
-              <a class="nav-link" href="/ejercicio01/index.html">Ejercicio 1</a>
+              <a class="nav-link" href="ejercicio01/index.html">Ejercicio 1</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/ejercicio02/index.html">Ejercicio 2</a>
+              <a class="nav-link" href="ejercicio02/index.html">Ejercicio 2</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/ejercicio03/index.html">Ejercicio 3</a>
+              <a class="nav-link" href="ejercicio03/index.html">Ejercicio 3</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/ejercicio04/index.html">Ejercicio 4</a>
+              <a class="nav-link" href="ejercicio04/index.html">Ejercicio 4</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/ejercicio05/index.html">Ejercicio 5</a>
+              <a class="nav-link" href="ejercicio05/index.html">Ejercicio 5</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/ejercicio06/index.html">Ejercicio 6</a>
+              <a class="nav-link" href="ejercicio06/index.html">Ejercicio 6</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/ejercicio07/index.html">Ejercicio 7</a>
+              <a class="nav-link" href="ejercicio07/index.html">Ejercicio 7</a>
             </li>
           </ul>
         </div>
