--- a/ejercicio02/index.html
+++ b/ejercicio02/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>1.Validación de un formulario</title>
+  <title>2. Cambiar imagen al hacer clic</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,26 +10,22 @@
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-
 </head>
 
 <body>
-  
-  <div class="container">
-    
-    <div class="container d-flex align-items-center justify-content-center" style="height: 100vh;">
-        <div class="col-md-6">
-          <h1 class="text-center">Pulsa imagen</h1>
-          <form action="" method="" id="formulario" name="formulario">
-            <div class="form-group mb-2 text-center"> 
-              <img src="circulo.png" id="imagen" class="border" alt="" >
-            </div>
-          </form>
+  <main>
+    <div class="container d-flex justify-content-center align-items-center vh-100">
+      <div class="col-md-6">
+        <h1 class="text-center">Haz clic en la imagen</h1>
+        <div class="mb-2 text-center">
+          <img src="circulo.png" id="imagen" class="border" alt="">
         </div>
       </div>
     </div>
-    
-    <script src="validar.js"></script>
+  </main>
+
+  <!-- JavaScript -->
+  <script src="validar.js"></script>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
