--- a/ejercicio04/index.html
+++ b/ejercicio04/index.html
@@ -2,44 +2,41 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <title>4.Contador de caracteres en tempo real</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS v5.2.1 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
 
 </head>
 
 <body>
-  <header>
-    <!-- place navbar here -->
-  </header>
-  <main>
-    <div class="container">
-        <form>
-          <div class="form-group">
-            <label for="contador_caracteres">Contador de Caracteres</label>
-            <input type="text" class="form-control" id="contador_caracteres" placeholder="(Maximo 10 Caracteres)">
-            <p class="help-block"><span id="contador"></span></p>
-          </div>
-        </form>
+
+  <main class="container text-center">
+    <div class="container d-flex justify-content-center align-items-center vh-100">
+      <div class="col-md-6 mx-auto">
+        <h1>Contador de Caracteres</h1>
+        <div class="form-group">
+          <input type="text" class="form-control" id="contador_caracteres" placeholder="(Máximo 10 caracteres)">
+          <p class="help-block"><span id="contador"></span></p>
+        </div>
       </div>
-      <script src="contadorCaracteres.js"></script>
+    </div>
   </main>
-  <footer>
-    <!-- place footer here -->
-  </footer>
+
+
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-  </script>
+    </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-  </script>
+    </script>
+
+  <script src="contadorCaracteres.js"></script>
 </body>
 
 </html>
