--- a/ejercicio06/index.html
+++ b/ejercicio06/index.html
@@ -3,17 +3,42 @@
   <head>
     <meta charset="UTF-8">
     <title>Calculadora</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
+    
   </head>
   <body>
-    <input type="text" id="num1">
-    <input type="text" id="num2">
-    <br>
-    <button onclick="sumar()">Sumar</button>
-    <button onclick="restar()">Restar</button>
-    <button onclick="multiplicar()">Multiplicar</button>
-    <button onclick="dividir()">Dividir</button>
-    <br>
-    <p id="resultado"></p>
+    <div class="container">
+      <input type="text" id="operacion" readonly>
+      <br>
+      <div class="btn-group" role="group">
+        <button class="btn btn-secondary" onclick="agregarNumero(7)">7</button>
+        <button class="btn btn-secondary" onclick="agregarNumero(8)">8</button>
+        <button class="btn btn-secondary" onclick="agregarNumero(9)">9</button>
+        <button class="btn btn-primary" onclick="agregarOperador('/')">/</button>
+      </div>
+      <br>
+      <div class="btn-group" role="group">
+        <button class="btn btn-secondary" onclick="agregarNumero(4)">4</button>
+        <button class="btn btn-secondary" onclick="agregarNumero(5)">5</button>
+        <button class="btn btn-secondary" onclick="agregarNumero(6)">6</button>
+        <button class="btn btn-primary" onclick="agregarOperador('*')">*</button>
+      </div>
+      <br>
+      <div class="btn-group" role="group">
+        <button class="btn btn-secondary" onclick="agregarNumero(1)">1</button>
+        <button class="btn btn-secondary" onclick="agregarNumero(2)">2</button>
+        <button class="btn btn-secondary" onclick="agregarNumero(3)">3</button>
+        <button class="btn btn-primary" onclick="agregarOperador('-')">-</button>
+      </div>
+      <br>
+      <div class="btn-group" role="group">
+        <button class="btn btn-danger" onclick="limpiarCampos()">C</button>
+        <button class="btn btn-secondary" onclick="agregarNumero(0)">0</button>
+        <button class="btn btn-danger" onclick="calcular()">=</button>
+        <button class="btn btn-primary" onclick="agregarOperador('+')">+</button>
+      </div>
+    </div>
     <script src="calculadora.js"></script>
   </body>
 </html>
