Ejercicios de páginas web dinámicas

--- a/ejercicio04/index.html
+++ b/ejercicio04/index.html
@@ -36,7 +36,7 @@
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
     </script>
 
-  <script src="contadorCaracteres.js"></script>
+  <script src="js/contadorCaracteres.js"></script>
 </body>
 
 </html>
