--- a/ejercicio01/index.html
+++ b/ejercicio01/index.html
@@ -35,7 +35,7 @@
   </main>
 
   <!-- JavaScript -->
-  <script src="validar.js"></script>
+  <script src="js/validar.js"></script>
 
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
