--- a/ejercicio05/index.html
+++ b/ejercicio05/index.html
@@ -47,7 +47,7 @@
     </div>
   </main>
 
-  <script src="desplegable.js"></script>
+  <script src="js/desplegable.js"></script>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
