--- a/ejercicio06/index.html
+++ b/ejercicio06/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Calculadora</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     
   </head>
   <body>
@@ -15,14 +15,14 @@
         <button class="btn btn-secondary" onclick="agregarNumero(7)">7</button>
         <button class="btn btn-secondary" onclick="agregarNumero(8)">8</button>
         <button class="btn btn-secondary" onclick="agregarNumero(9)">9</button>
-        <button class="btn btn-primary" onclick="agregarOperador('/')">/</button>
+        <button class="btn btn-primary" onclick="agregarOperador('÷')">÷</button>
       </div>
       <br>
       <div class="btn-group" role="group">
         <button class="btn btn-secondary" onclick="agregarNumero(4)">4</button>
         <button class="btn btn-secondary" onclick="agregarNumero(5)">5</button>
         <button class="btn btn-secondary" onclick="agregarNumero(6)">6</button>
-        <button class="btn btn-primary" onclick="agregarOperador('*')">*</button>
+        <button class="btn btn-primary" onclick="agregarOperador('x')">x</button>
       </div>
       <br>
       <div class="btn-group" role="group">
@@ -39,6 +39,6 @@
         <button class="btn btn-primary" onclick="agregarOperador('+')">+</button>
       </div>
     </div>
-    <script src="calculadora.js"></script>
+    <script src="js/calculadora.js"></script>
   </body>
 </html>
