--- a/ejercicio07/index.html
+++ b/ejercicio07/index.html
@@ -15,6 +15,6 @@
     </div>
 
     <!-- Agrega el archivo JavaScript con el código del reloj -->
-    <script src="reloj.js"></script>
+    <script src="js/reloj.js"></script>
 </body>
 </html>
