Ejercicios de páginas web dinámicas

--- a/ejercicio02/index.html
+++ b/ejercicio02/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>2. Cambiar imagen al hacer clic</title>
+  <title>2.Cambiar imagen al hacer click</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
