--- a/ejercicio06/index.html
+++ b/ejercicio06/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Calculadora</title>
+    <title>6.Calculadora simple</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     
