--- a/ejercicio07/index.html
+++ b/ejercicio07/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Enlaza los archivos CSS y JS de Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
-    <title>Ejercicio 10</title>
+    <title>7.Reloxo en tempo real</title>
 </head>
 <body>
     <!-- Agrega la clase "container" para centrar el contenido -->
