Ejercicios de páginas web dinámicas

--- a/ejercicio06/index.html
+++ b/ejercicio06/index.html
@@ -15,14 +15,14 @@
         <button class="btn btn-secondary" onclick="agregarNumero(7)">7</button>
         <button class="btn btn-secondary" onclick="agregarNumero(8)">8</button>
         <button class="btn btn-secondary" onclick="agregarNumero(9)">9</button>
-        <button class="btn btn-primary" onclick="agregarOperador('÷')">÷</button>
+        <button class="btn btn-primary" onclick="agregarOperador('/')">÷</button>
       </div>
       <br>
       <div class="btn-group" role="group">
         <button class="btn btn-secondary" onclick="agregarNumero(4)">4</button>
         <button class="btn btn-secondary" onclick="agregarNumero(5)">5</button>
         <button class="btn btn-secondary" onclick="agregarNumero(6)">6</button>
-        <button class="btn btn-primary" onclick="agregarOperador('x')">x</button>
+        <button class="btn btn-primary" onclick="agregarOperador('*')">x</button>
       </div>
       <br>
       <div class="btn-group" role="group">
