--- a/ejercicio02/index.html
+++ b/ejercicio02/index.html
@@ -18,14 +18,14 @@
       <div class="col-md-6">
         <h1 class="text-center">Haz clic en la imagen</h1>
         <div class="mb-2 text-center">
-          <img src="circulo.png" id="imagen" class="border" alt="">
+          <img src="img/circulo.png" id="imagen" class="border" alt="">
         </div>
       </div>
     </div>
   </main>
 
   <!-- JavaScript -->
-  <script src="validar.js"></script>
+  <script src="js/validar.js"></script>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
